Fixed overflow issue and grid alignment
Removed flex-wrap from grid container to fix centered
overflow.

Grid rows are now being aligned as rows instead of columns.

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,7 @@
 
 .grid-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     border: 3px solid black;
 }
 
@@ -26,6 +24,10 @@
     align-items: center;
     padding-top: 15px;
     margin: 25px;
+}
+
+.row {
+    display: flex;
 }
 
 #grid {
